<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landingpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.drewhoo.hw2.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="1pt"
        android:layout_marginRight="1pt">
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/easy"
            android:textSize="12pt"
            android:onClick="gameSetting"
            android:id="@+id/btn0">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/med"
            android:textSize="12pt"
            android:onClick="gameSetting"
            android:id="@+id/btn1">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/hard"
            android:textSize="12pt"
            android:onClick="gameSetting"
            android:id="@+id/btn2">
        </Button>
    </LinearLayout>

</LinearLayout>
