<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/content_main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:context="com.example.drewhoo.hw2.MainActivity"-->
    <!--tools:showIn="@layout/activity_main">-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.drewhoo.hw2.MainActivity"
    tools:showIn="@layout/activity_main">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linearLayout0"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="1pt"
        android:layout_marginRight="1pt">
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn0">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn1">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn2">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linearLayout1"
        android:layout_marginLeft="1pt"
        android:layout_marginRight="1pt">

        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn3">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn4">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn5">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linearLayout2"
        android:layout_marginLeft="1pt"
        android:layout_marginRight="1pt">

        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn6">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn7">
        </Button>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="28pt"
            android:onClick="onClick"
            android:id="@+id/btn8">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="4pt"
            android:layout_marginRight="4pt"
            android:text="@string/startGameText"
            android:textSize="14pt"
            android:layout_marginTop="3pt"
            android:id="@+id/gameText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/linearLayout4"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/startText"
            android:textSize="12pt"
            android:layout_marginTop="0pt"
            android:id="@+id/score"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout8"
        android:layout_marginLeft="1pt"
        android:layout_marginRight="1pt">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/again"
            android:textSize="8pt"
            android:onClick="onClick"
            android:id="@+id/btnY">
        </Button>
    </LinearLayout>
</LinearLayout>